--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.6
   flutter_bloc: ^8.1.1
+  flutter_local_notifications: ^13.0.0
+  firebase_messaging: ^14.1.4
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
